# IRec

./: .gitignore  .ruff.toml  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  review.md  run.sh  todo.txt
checkpoints/: bert4rec_beauty_final_state.pth  sasrec_test_final_state.pth
configs/: base_config.json  bert4rec_train_config.json  bert4rec_train_config_new.json  pop_train_config.json  pure_mf_train_config.json  sasrec_train_config.json  sasrec_train_config_new.json
logs/: events.out.tfevents.1649508792.deadinside.1932.0  events.out.tfevents.1649508844.deadinside.3578.0  events.out.tfevents.1649508927.deadinside.6145.0
modeling/: __init__.py  infer.py  infer_multiple.py  main.ipynb  pretrain.py  train.py  train_multiple.py  trie.py
notebooks/: AliAdDatasetPreprocesser.ipynb  AliCCPDatasetPreprocessor.ipynb  AmazonBeautyDatasetStatistics.ipynb  AmazonBookDatasetStatistics.ipynb  AmazonClothingDatasetStatistics.ipynb  AmazonClothingDatasetUserSplit.ipynb  AmazonDatasetsStatistics.ipynb  AmazonReviews2018DatasetPreprocessor.ipynb  AmazonSportsDatasetStatistics.ipynb  BeautyPreparation.ipynb  Bert4RecAndSasRecDataTimelineProcessor.ipynb  CollisionSolver.ipynb  DoubanDatasetPreprocessor.ipynb  GowallaDatasetStatistics.ipynb  HVIDEODatasetPreprocessor.ipynb  MovieLens10MDatasetStatistics.ipynb  MovieLens1MDatasetStatistics.ipynb  RQKMeansEmbeddingCreation.ipynb  SteamDatasetPreprocessor.ipynb  Yelp2018DatasetStatistics.ipynb
scripts/: amazonreviews2018_dataset_preprocessor.py  hvideo_dataset_preprocessor.py  infer_multiple.py  (+1 more)
src/: main.ipynb  (+4 more)
(+385 files in other folders)
